--- a/src/app/dashboard/components/payment-info/payment-info.component.html
+++ b/src/app/dashboard/components/payment-info/payment-info.component.html
@@ -4,6 +4,11 @@
     [disabled]="!!(paymentDisabled$ | async)"
   />
 
+  <csd-payment-crypto
+    *ngSwitchCase="PaymentWays.CRYPTO"
+    [disabled]="!!(paymentDisabled$ | async)"
+  />
+
   <csd-payment-card
     *ngSwitchDefault
     [disabled]="!!(paymentDisabled$ | async)"
