--- a/src/app/purchase/purchase.component.scss
+++ b/src/app/purchase/purchase.component.scss
@@ -4,4 +4,8 @@ csd-purchase {
     @apply tw-max-w-[530px] tw-w-full tw-justify-self-center tw-justify-items-center;
     @apply tw-py-9 tw-px-8 xs:tw-py-8 xs:tw-px-6;
   }
+
+  csd-crypto-payment {
+    @apply tw-grid tw-justify-items-center;
+  }
 }
