[styles] Minor fixes

--- a/src/app/licenses-list/components/header/header.component.scss
+++ b/src/app/licenses-list/components/header/header.component.scss
@@ -5,6 +5,6 @@
   }
 
   &__button {
-    @apply tw-w-48 xs:tw-w-full tw-max-w-xs tw-h-[46px] xs:tw-h-10;
+    @apply tw-w-48 xs:tw-w-full tw-max-w-xs xs:tw-h-11;
   }
 }
