[styles] minor fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,5 +7,5 @@ csd-snackbar {
 }
 
 .content-wrapper {
-  @apply tw-px-20 md:tw-px-10 xs:tw-px-5 tw-grid tw-py-6;
+  @apply tw-px-20 md:tw-px-10 xs:tw-px-5 tw-grid tw-pb-6;
 }
