[new] Accesibility improvements

--- a/src/app/common/components/footer/footer.component.html
+++ b/src/app/common/components/footer/footer.component.html
@@ -1,11 +1,15 @@
 <footer class="row">
   <a href="https://cactusweb.io" target="_blank" class="link">CactusDash</a>
 
-  <div class="row !tw-justify-center tw-gap-3 xs:tw-row-start-3">
+  <div
+    class="row !tw-justify-center tw-gap-3 xs:tw-row-start-3"
+    aria-label="Social links"
+  >
     <a
       class="csd-button"
       target="_blank"
       rel="noopener"
+      aria-label="VK group"
       href="https://vk.com/cactus_web"
     >
       <mat-icon fontIcon="icon-vk" class="!tw-text-[10px]" />
@@ -15,6 +19,7 @@
       class="csd-button"
       target="_blank"
       rel="noopener"
+      aria-label="Discord public server"
       href="https://discord.gg/5DSEj7Dan8"
     >
       <mat-icon fontIcon="icon-discord" />
@@ -24,6 +29,7 @@
       class="csd-button"
       target="_blank"
       rel="noopener"
+      aria-label="Twitter acc"
       href="https://twitter.com/CactusDash_"
     >
       <mat-icon fontIcon="icon-twitter" />
