--- a/src/app/common/modules/crypto-payment/components/recipient/recipient.component.html
+++ b/src/app/common/modules/crypto-payment/components/recipient/recipient.component.html
@@ -10,6 +10,7 @@
     class="csd-button_icon"
     color="primary"
     type="button"
+    aria-label="Copy recipient wallet address"
     [disabled]="!recipient"
   >
     <mat-icon fontIcon="icon-copy" />
