--- a/src/app/purchase/steps/purchase-success/purchase-success.component.html
+++ b/src/app/purchase/steps/purchase-success/purchase-success.component.html
@@ -10,6 +10,7 @@
         </span>
         <button
           class="csd-button_icon"
+          aria-label="Copy license key"
           color="primary"
           (click)="copy(license.key)"
         >
