--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,10 +13,12 @@
 @import "./styles/components/input";
 @import "./styles/components/tag";
 @import "./styles/components/skeleton-loading";
+@import "./styles/components/scroll-bar";
 
 body {
   @apply tw-bg-[#CEDEE5];
   --primary-color: #3880ec;
+  @extend .csd-scroll;
 }
 
 html,
