[new] Minor changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <csd-lazy-loading-spinner
   class="tw-fixed tw-w-full tw-top-0 tw-left-0 tw-z-50"
 />
-<csd-snackbar class="tw-z-[100000]" />
+<csd-snackbar class="tw-z-[100000]" aria-label="Snackbar of notifications" />
 
 <csd-nav-default />
 <div class="content-wrapper">
