--- a/src/app/common/modules/snackbar/components/snackbar-item.component.html
+++ b/src/app/common/modules/snackbar/components/snackbar-item.component.html
@@ -10,6 +10,6 @@
   <div class="msg">{{ text }}</div>
 </div>
 
-<button (click)="close.emit()">
+<button (click)="close.emit()" aria-label="Close snackbar notification">
   <mat-icon fontIcon="icon-close" />
 </button>
