--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@
 @import "./styles/components/skeleton-loading";
 @import "./styles/components/scroll-bar";
 
+* {
+  font-display: swap;
+}
+
 body {
   @apply tw-bg-[#CEDEE5];
   --primary-color: #3880ec;
